# huawei-modem

./: .gitignore  Cargo.toml  README.md
examples/: decode-pdu.rs  interactive.rs
src/: at.rs  codec.rs  convert.rs  error_codes.rs  errors.rs  future.rs  gsm_encoding.rs  lib.rs  main.rs  parse.rs  pdu.rs  util.rs
src/cmd/: mod.rs  network.rs  sms.rs
src/gsm_encoding/: lookup_tables.rs  mod.rs  udh.rs
